
(library
 (name utils)
 (modules bb morton126 centroid)
 (libraries owl body core)
 (preprocess
  (pps ppx_jane)))

(library
 (name otree)
 (modules otree)
 (libraries owl body core utils)
 (preprocess
  (pps ppx_jane)))

(library
 (name lmotree)
 (modules lmotree)
 (libraries owl body core utils)
 (preprocess
  (pps ppx_jane)))


(library
 (name otree_test)
 (modules otree_test)
 (libraries otree core)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))


(library
 (name lmotree_test)
 (modules lmotree_test)
 (libraries lmotree core utils)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))
