(library
 (name utils)
 (modules bb centroid)
 (libraries owl body core)
 (preprocess
  (pps ppx_jane)))

(library
 (name otree)
 (modules otree)
 (libraries owl body core utils)
 (preprocess
  (pps ppx_jane)))

(library
 (name otree_test)
 (modules otree_test)
 (libraries otree core)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))
